fixed portfolio viewer image center align property

--- a/src/components/CommonComponents/PortfolioViewer/PortfolioViewer.css
+++ b/src/components/CommonComponents/PortfolioViewer/PortfolioViewer.css
@@ -18,6 +18,7 @@ margin-top: 0;
     padding: 20px 40px;
     background: transparent linear-gradient(242deg, #5C90F5 0%, #006FFF 100%) 0% 0% no-repeat padding-box;
     border-radius: 3px;
+    height: 100%;
 }
 .portfolio-image-container img{
     max-width: 100%;
